# contract-upgrade-example

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Readme.md  rust-toolchain
.github/workflows/: ci-contract-upgrade-example.yml
call_set_text/: Cargo.toml
call_set_text/src/: main.rs
call_upgrade/: Cargo.toml
call_upgrade/src/: main.rs
contract/: Cargo.toml
contract/src/: contract.rs  dao.rs  installer.rs  main.rs  messenger.rs  test.rs  upgrader.rs
contract_upgrade/: Cargo.toml
contract_upgrade/src/: upgrade.rs
installer/: Cargo.toml
installer/src/: main.rs
messanger/: Cargo.toml
messanger/src/: assert_message.rs  messanger_locked_install.rs  messanger_v1_install.rs  messanger_v2_upgrade.rs
not_secure_contract/: Cargo.toml
not_secure_contract/src/: installer.rs  messenger.rs  test.rs
secure_contract/: Cargo.toml
secure_contract/src/: dao.rs  messenger.rs  test.rs
simple_upgrade/: Cargo.toml
simple_upgrade/src/: installer.rs  test.rs  upgrader.rs
tests/: Cargo.toml
tests/src/: integration_tests.rs  test_deploy.rs  utils.rs
tests/wasm/: call-set-text.wasm  call-upgrade.wasm  contract.wasm  installer.wasm  messenger.wasm  nonsec_installer.wasm  nonsec_messenger.wasm  nonsec_test.wasm  test.wasm  upgrader.wasm
