[package]
name = "contract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.1.1"
casper-types = "1.1.1"

[[bin]]
name = "messenger"
path = "src/messenger.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "upgrader"
path = "src/upgrader.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "test"
path = "src/test.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]

[profile.release]
lto = true
