[package]
name = "installer"
version = "0.1.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { git = "https://github.com/CasperLabs/casper-node", version = "0.6" }
casper-types = { git = "https://github.com/CasperLabs/casper-node", version = "0.6" }


[[bin]]
name = "installer"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]

[profile.release]
lto = true
