[package]
name = "tests"
version = "0.1.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
casper-contract = { git = "https://github.com/CasperLabs/casper-node", version = "0.6" }                 
casper-types = { git = "https://github.com/CasperLabs/casper-node", version = "0.6" }                    
casper-engine-test-support = { git = "https://github.com/CasperLabs/casper-node", version = "0.6" }

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-engine-test-support/test-support", "casper-contract/test-support"]
