[package]
name = "tests"
version = "0.2.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

[dev-dependencies]
casper-types = "1.4.1"
casper-contract = "1.4.1"
casper-engine-test-support = "1.4.1"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-engine-test-support/test-support", "casper-contract/test-support"]
