[package]
name = "tests"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]
casper-types = "1.5.0"
casper-contract = "1.4.4"
casper-engine-test-support = "2.2.0"
casper-execution-engine = "=2.0.0"
rand = "0.8.5"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-engine-test-support/test-support", "casper-contract/test-support"]
